...
        android:id="@+id/registrationPhaseOneFragment"
        android:name="com.example.securex.registration.RegistrationPhaseOneFragment"
        android:label="fragment_registration_phase_one"
        tools:layout="@layout/fragment_registration_phase_one" >
        <action
            android:id="@+id/action_registrationPhaseOneFragment_to_registrationPhaseTwoFragment"
            app:destination="@id/registrationPhaseTwoFragment" />
    </fragment>
    <fragment
        android:id="@+id/registrationPhaseSixFragment"
        android:name="com.example.securex.registration.RegistrationPhaseSixFragment"
        android:label="fragment_registration_phase_six"
        tools:layout="@layout/fragment_registration_phase_six" >
...
